--- a/fly.toml
+++ b/fly.toml
@@ -1,22 +1,13 @@
-# fly.toml app configuration file generated for ytapi-aqun on 2025-06-24T02:08:46+08:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+app = "ytapi-aqun"
 
-app = 'ytapi-aqun'
-primary_region = 'hkg'
+[env]
+PORT = "5000"
 
 [build]
+  dockerfile = "Dockerfile"
 
 [http_service]
-  internal_port = 8080
+  internal_port = 5000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
-
-[[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
